--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -4,21 +4,28 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 700px;
   background: #fff;
   margin: 16px auto;
+  padding: 15px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 15px;
+  margin: 15px 0;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 30px 15px;
+  font-size: 24px;
+  margin: 15px 0;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
 }
 
 button {
