--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -26,9 +26,15 @@ body {
 .button-container {
   background: #e3f4ff;
   text-align: center;
+  padding: 15px 15px;
+  font-size: 24px;
 }
 
 button {
+  display: block;
+  margin: 0px auto;
   background: white;
   border: 1px solid #eee;
+  font-size: 24px;
+  padding: 15px 35px;
 }
