--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -4,16 +4,16 @@ body {
 }
 
 .card {
-  width: 450px;
+  width: 400px;
   background: #fff;
-  margin: 8px auto;
-  padding: 15px;
+  margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
   padding: 8px;
-  margin: 8px 0;
+  margin-bottom: 8px;
   font-size: 16px;
 }
 
@@ -31,7 +31,7 @@ body {
 
 button {
   display: block;
-  margin: 0px auto;
+  margin: 0 auto;
   background: white;
   border: 1px solid #eee;
   padding: 8px 24px;
