--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -23,3 +23,18 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.right-links ul,
+.left-links ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 0 10px;
+}
